# TipAi

./: .dockerignore  .env.example  .gitignore  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEV_ROLE.md  DEV_TASKS.md  Dockerfile  HANDOFF.md  LICENSE.md  README.md  RESEARCH_Dynamic_Prompt.md  ROADMAP.md  SECURITY.md  TECH_DEBT_REPORT.md  UI_DEV_TASKS.md  UI美化进化.md  drizzle.config.ts  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  qa-deepseek-test.mjs  qa-test-suite-v3.mjs  qa-test-suite.mjs  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.shield_security/: audit-report.md
__mocks__/: native.ts
api/: auth-router.test.ts  auth-router.ts  boot.ts  context.ts  export-router.ts  middleware.ts  optimizer-router.ts  project-router.ts  promptforge-router.ts  rest-router.ts  router.ts  template-router.ts
contracts/: constants.ts  dynamic-prompt.ts  lifecycle.ts
db/: backup.ts  init.ts  migrate.ts  relations.ts  schema.ts  seed.ts
docs/: ARCHITECTURE_REBUILD_PLAN.md  ATTRIBUTION.md  CHANGELOG.md  DELEGATION_PROMPT.md  HANDOFF_PROMPT.md  (+10 more)
native/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
native/.cargo/: config.toml
native/src/: lib.rs
native/src/ai/: client.rs  mod.rs
native/src/crypto/: mod.rs
native/src/db/: connection.rs  conversations.rs  evaluations.rs  migrations.rs  mod.rs  optimizations.rs  projects.rs  prompts.rs  settings.rs  summaries.rs  templates.rs  users.rs
native/src/drift/: mod.rs
native/src/quality/: mod.rs
(+259 files in other folders)
