[package]
name = "tipai-core"
version = "1.0.0"
edition = "2021"
authors = ["TipAi Team"]
description = "Native core for TipAi: SQLite + AI HTTP + Crypto"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI bindings
napi = { version = "2.16", default-features = false, features = ["napi8", "async", "tokio_rt"] }
napi-derive = "2.16"

# SQLite
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json", "uuid"] }

# Async runtime + HTTP
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"

# Error handling + utilities
thiserror = "1.0"
once_cell = "1.20"
parking_lot = "0.12"
regex = "1.10"

# Logging (optional, for debug builds)
# log = "0.4"
# env_logger = "0.11"

[dependencies.uuid]
version = "1.10"
features = ["v4", "serde"]

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
opt-level = 3
strip = "symbols"
codegen-units = 1
panic = "abort"
